// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HelpBar > content rendering > renders multiple key bindings 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓ Navigate • Enter Select • q Quit                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`HelpBar > content rendering > renders simple text content 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Press q to quit                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`HelpBar > detail view help bar content > renders detail view key bindings 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ←/Esc Back • i Chat • y Copy • ↑↓ Scroll                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`HelpBar > empty and minimal content > renders with empty string 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`HelpBar > empty and minimal content > renders with single character 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ q                                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`HelpBar > list view help bar content > renders list view key bindings 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ n New • Enter/→ View • d Kill • Tab Switch • q Quit                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`HelpBar > with children components > renders Text children 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ n New Agent • d Delete                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`HelpBar > with children components > renders mixed content 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Press Enter to confirm                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
